@@ -837,6 +837,19 @@ d-i netcfg/wireless_wep string
 #d-i hw-detect/load_firmware boolean true
 </screen></informalexample>
 
+<para>
+
+Please note that <command>netcfg</command> will automatically determine the
+netmask if <classname>netcfg/get_netmask</classname> is not preseeded.  In
+this case, the variable has to be marked as <literal>seen</literal> for
+automatic installations.  Similarly, <command>netcfg</command> will choose
+an appropriate address if <classname>netcfg/get_gateway</classname> is not
+set.  As a special case, you can set
+<classname>netcfg/get_gateway</classname> to <quote>none</quote> to specify
+that no gateway should be used.
+
+</para>
+
   </sect2>
 
   <sect2 id="preseed-mirror">
